--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <!-- Link to our stylesheet! -->
+    <link rel="stylesheet" href="style.css">
+
+    </head>
+
+  <body>
+
     <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
     <!-- uncomment lines below to include extra p5 libraries -->
     <script language="javascript" src="libraries/p5.dom.js"></script>
@@ -8,9 +15,6 @@
     <script language="javascript" type="text/javascript" src="sketch.js"></script>
     <script language="javascript" type="text/javascript" src="snake.js"></script>
     <!-- this line removes any default padding and style. you might only need one of these values set. -->
-    <style> body {padding: 0; margin: 0;} </style>
-  </head>
-
-  <body>
+    <!-- <style> body {padding: 0; margin: 0;} </style> -->
   </body>
 </html>
