--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <!-- Link to our stylesheet! -->
     <link rel="stylesheet" href="style.css">
 
-    </head>
+    <title>Classic Snake Game Online (FREE)</title>
+  </head>
 
   <body>
 
