--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <html>
   <head>
     <meta charset="UTF-8">
+
     <!-- Link to our stylesheet! -->
     <link rel="stylesheet" href="style.css">
 
     <title>Classic Snake Game Online (FREE)</title>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon-16x16.png">
   </head>
 
   <body>
