--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <html>
   <head>
     <meta charset="UTF-8">
+
     <!-- Link to our stylesheet! -->
     <link rel="stylesheet" href="style.css">
 
     <title>Classic Snake Game Online (FREE)</title>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon-16x16.png">
   </head>
 
   <body>
@@ -12,10 +14,9 @@
     <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
     <!-- uncomment lines below to include extra p5 libraries -->
     <script language="javascript" src="libraries/p5.dom.js"></script>
-    <!--<script language="javascript" src="libraries/p5.sound.js"></script>-->
+    <script language="javascript" src="libraries/p5.sound.js"></script>
     <script language="javascript" type="text/javascript" src="sketch.js"></script>
     <script language="javascript" type="text/javascript" src="snake.js"></script>
-    <!-- this line removes any default padding and style. you might only need one of these values set. -->
-    <!-- <style> body {padding: 0; margin: 0;} </style> -->
+
   </body>
 </html>
